@@ -1,5 +1,8 @@
 2003-01-08  Mikael Djurfeldt  <djurfeldt@nada.kth.se>
 
+	* goops.c (scm_sys_prep_layout_x): Bugfix: Only create layout for
+	slots with instance allocation.
+	
 	* goops.c, goops.h (scm_class_extended_generic_with_setter): New
 	class.
 	(scm_compute_applicable_methods): Use scm_generic_function_methods.
